# wattpeak

./: .gitignore  README.md
.github/workflows/: cosmwasm.yml
cosmwasm/: Cargo.toml
cosmwasm/contracts/watpeak-staker/: Cargo.toml
cosmwasm/contracts/watpeak-staker/src/: execute.rs  helpers.rs  lib.rs  msg.rs  query.rs  state.rs
cosmwasm/contracts/wattpeak-minter/: Cargo.toml  README.md
cosmwasm/contracts/wattpeak-minter/src/: error.rs  execute.rs  helpers.rs  lib.rs  msg.rs  query.rs  state.rs
cosmwasm/contracts/wattpeak-staker/: Cargo.toml  README.md
cosmwasm/contracts/wattpeak-staker/src/: error.rs  execute.rs  helpers.rs  lib.rs  msg.rs  query.rs  state.rs
frontend/: .env  next.config.js  package-lock.json  package.json
frontend/components/common/: Analytics.tsx  Balances.tsx  Faq.tsx  Footer.tsx  Header.tsx  Home.tsx  Layout.tsx  MintedWattpeakChart.tsx  Minting.tsx  MultipleSelectBox.tsx  Projects.tsx  Settings.tsx  SideNavbar.tsx  Staking.tsx  Swap.tsx  SwapModal.tsx  stackedBarChart.tsx  stakedWattpeakChart.tsx  walletStakedWattpeakDonutChart.tsx
frontend/components/common/charts/: MintedWattpeakChart.tsx  stakedWattpeakChart.tsx  walletStakedWattpeakDonutChart.tsx
frontend/components/common/helpers/: GoogleMapComponent.tsx  Loading.tsx  MultipleSelectBox.tsx  SideNavbar.tsx  SwapModal.tsx
frontend/components/wallet/: Chain.tsx  Connect.tsx  Wallet.tsx  WalletContext.tsx
frontend/config/: defaults.ts  theme.ts
frontend/context/: WalletAddressContext.js  junoBalancesContext.js
frontend/pages/: _app.tsx  index.tsx
frontend/pages/api/: getGoogleMapsApiKey.ts  image-proxy.ts  newEpoch.ts  queryNftConfig.js  queryNftConfig.ts  queryNftsByAddress.js  queryNftsByAddress.ts
frontend/styles/: globals.css  responsiveCarousel.ts
frontend/utils/: handleMint.ts  junoBalances.ts  junoSetup.js  junoSetup.ts  queryAndMintNft.ts  queryNfts.ts  queryProjects.js  queryProjects.ts  queryStaker.js  queryStaker.ts  queryStakingConfig.ts  queryTotalWattpeakStaked.ts  stargazeBalances.ts  stargazeSetup.js
frontend/utils/balances/: formatBalances.ts  formatDenoms.ts  junoBalances.ts  setCorrectBalances.ts  stargazeBalances.ts
frontend/utils/queries/: queryAndMintNft.ts  queryNfts.ts  queryStaker.ts  queryStakingConfig.ts  queryTotalInterestWattpeak.ts  queryTotalWattpeakStaked.ts
frontend/utils/setup/: stargazeSetup.ts
frontend/utils/swap-functions/: handleApproveAndSwap.ts  handleMint.ts  handleMultipleNftSwap.ts  handleMultipleSolarSwap.ts  swapNftToTokens.ts
