[workspace]
members = ["contracts/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/solardao/wattpeak"

[workspace.dependencies]
cosmwasm-schema = "1.2.5"
cosmwasm-std = "1.2.5"
cw-storage-plus = "1.0.1"
juno-tokenfactory-types = "0.0.2"
serde = { version = "1.0.162", features = ["derive"] }
thiserror = "1.0.40"
token-bindings = "0.11.0"
prost = "0.11.9"
prost-types = "0.11.9"

cw-multi-test = "0.16.4"