[package]
name = "wattpeak-minter"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
token-bindings = { workspace = true }
juno-tokenfactory-types = { workspace = true }

[dev-dependencies]
cw-multi-test = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]